--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,8 +13,8 @@ psycopg2-binary==2.9.9
 fastapi-users[sqlalchemy]>=13.0.0
 fastapi-users-db-sqlalchemy>=6.0.1
 python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-bcrypt>=4.0.1
+# Use bcrypt required by pwdlib used in fastapi-users
+bcrypt==4.1.2
 
 # Email
 aiosmtplib==3.0.1
