--- a/render.yaml
+++ b/render.yaml
@@ -69,11 +69,12 @@ services:
           property: OPENAI_API_KEY
 
   # Frontend (Vite static site)
-  - type: static
+  - type: web
     name: legal-diff-frontend
+    env: static
     rootDir: ./frontend
     buildCommand: npm ci && npm run build
-    publishPath: dist
+    staticPublishPath: dist
     envVars:
       - key: VITE_API_URL
         fromService:
