--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     ports:
       - "8000:8000"
     environment:
+      - DISABLE_DOTENV=1
       - DATABASE_URL=postgresql://legal_diff_user:dev123@db:5432/legal_diff
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
@@ -76,6 +77,7 @@ services:
     volumes:
       - ./backend:/app
     environment:
+      - DISABLE_DOTENV=1
       - DATABASE_URL=postgresql://legal_diff_user:dev123@db:5432/legal_diff
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
