--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     command: uvicorn app.app:app --host 0.0.0.0 --port 8000 --reload
+    env_file:
+      - ./.env
     volumes:
       - ./backend:/app
     ports:
@@ -18,6 +20,9 @@ services:
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
       - SECRET_KEY=sdkljfhdlskfjkl3489r79fjisfklj0342
       - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - DEEPSEEK_API_KEY=${DEEPSEEK_API_KEY}
+      - DEEPSEEK_BASE_URL=${DEEPSEEK_BASE_URL}
+      - LLM_MODEL=${LLM_MODEL}
       - SMTP_HOST=smtp.example.com
       - SMTP_PORT=587
       - SMTP_USER=user@example.com
@@ -74,6 +79,8 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     command: celery -A app.worker.celery_app worker --loglevel=info
+    env_file:
+      - ./.env
     volumes:
       - ./backend:/app
     environment:
@@ -83,6 +90,9 @@ services:
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
       - SECRET_KEY=sdkljfhdlskfjkl3489r79fjisfklj0342
       - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - DEEPSEEK_API_KEY=${DEEPSEEK_API_KEY}
+      - DEEPSEEK_BASE_URL=${DEEPSEEK_BASE_URL}
+      - LLM_MODEL=${LLM_MODEL}
     depends_on:
       - api
       - db
